# sherlock

./: .gitignore  Dockerfile  LICENSE  NOTICE.md  README.md  pyproject.toml
src/: main.py  tasks.py
src/clients/: s3_client.py
src/core/: celery_app.py  celeryconfig.py  logging.py  settings.py
src/domain/: analysis_helper.py  coincidence_counter.py  dataclasses.py  report_builder.py
src/graph/: graph_analysis.py  graph_builder.py  graph_visualizer.py
tests/: conftest.py  test_main.py  test_tasks.py
tests/clients/: test_s3_client.py
tests/domain/: test_analysis_helper.py  test_coincidence_counter.py  test_report_builder.py
tests/graph/: test_graph_builder.py
tests/mocked_data/: interactions.py
